Added Spring Boot Actuators + Spring Security fix

--- a/rade-webapp/pom.xml
+++ b/rade-webapp/pom.xml
@@ -65,6 +65,10 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     <dependency>
@@ -217,6 +221,7 @@
         <directory>src/main/resources</directory>
         <includes>
           <include>version.properties</include>
+          <include>application.properties</include>
         </includes>
         <filtering>true</filtering>
       </resource>
