--- a/rade-webapp/src/main/resources/application.properties
+++ b/rade-webapp/src/main/resources/application.properties
@@ -15,5 +15,20 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #
 # $Id$
+
+# Application Information (filtered from pom.xml)
+# Displayed in browser at /actuator/info
+info.app.name=${project.name}
+info.app.version=${project.version}
+
+# Spring MVC configuration
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
+
+# Spring Boot Actuators (displayed in browser at /actuator/)
+# NB Spring Security permits all access to health & info,
+# but requires authenticated user for the rest.
+management.endpoints.web.exposure.include=health,info,metrics,logfile
+
+# Needed for logfile Actuator (corresponds to configuration in logback.xml)
+logging.file=logs/rade.log
